<resources>
    <string name="app_name">TT \'17</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_delete_all">Delete All</string>
    <string name="fest_name">TechTatva\'17</string>
    <string name="fest_tag_line"><i>Replace with tag line</i></string>
    <string name="drawer_home">Home</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="drawer_online_events">Online Events</string>
    <string name="drawer_results">Results</string>
    <string name="drawer_developers">Developers</string>
    <string name="drawer_about_us">About Us</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_events">Events</string>
    <string name="bottom_nav_categories">Categories</string>
    <string name="categories">Categories</string>
    <string name="results">Results</string>
    <string name="favourites">Favourites</string>
    <string name="more">MORE</string>
    <string name="home_insta_title">#TechTatva17 on Instagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="home_fragment">Home</string>
    <string name="event_fragment">Events </string>
    <string name="about_fragment">About Us  </string>
    <string name="developers_fragment">Developers</string>
    <string name="online_fragment">Online Events</string>
    <string name="no_results">Hold your horses!</string>
    <string name="no_results_2">The results aren\'t out yet.</string>
    <string name="venue">Venue</string>
    <string name="filter_events">Filter Events</string>
    <string name="qualified_teams">Qualified Teams • Round:</string>
    <string name="team_id">Team ID:</string>
    <string name="about_us_title">About Us</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="no_events">No events</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="TT_android">TT\'17 (Android)</string>
    <string name="TT_ios">TT\'17 (iOS)</string>
    <string name="TT_windows">TT\'17 (Windows)</string>
    <string name="head">Head</string>
    <string name="developer">Developer</string>
    <string name="Anurag">Anurag Choudhary</string>
    <string name="Abhishek">Abhishek Vora</string>
    <string name="Gautham">Gautham Vinod</string>
    <string name="Rahul">Rahul Sathanapalli</string>
    <string name="Reuben">Reuben Nellissery</string>
    <string name="Saptarshi">Saptarshi Roy Choudhuri</string>
    <string name="Mahima">Mahima Borah</string>
    <string name="Rhitam">Rhitam Dutta</string>
    <string name="Anjali">Anjali Premjit</string>
    <string name="Krishna">Krishna Birla</string>
    <string name="about_us">Nautilus, in \"20,000 Leagues Under the Sea\" , was imagined by Jules Verne a full twenty-four years before Simon Lake used it as a reference to realise his dream of building a working submarine. Technology has a rich history of first appearing in fiction, before pioneers of the age bring such ideas into reality. Gadgets resembling Google Glass, Skype\'s realtime language translator, and iPads have appeared in Star Trek more than three decades before the world got their hands on working versions of them. TechTatva \'17 pays its tribute to this nexus between artists and scientists with its theme \"Realising Fiction\". With projects and events that bring out the innovative genius in you, here\'s to hoping somewhere in this fest you bring your day-dreams to reality too!</string>
    <string name="no_connection">No Connection!</string>
    <string name="no_connection_text">Please connect to the internet and retry.</string>
    <string name="retry">Retry</string>
    <string name="about_categories">About Categories</string>
    <string name="unable_to_load_insta">Unable to load Instagram feed. Swipe down to retry!</string>
    <string name="scroll_up">Scroll up for more</string>

</resources>
