<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/drawer_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/drawer_favourites"
            android:icon="@drawable/drawer_favourites"
            android:title="@string/drawer_favourites" />
        <item
            android:id="@+id/drawer_online_events"
            android:icon="@drawable/drawer_online"
            android:title="@string/drawer_online_events" />

        <item
            android:id="@+id/drawer_results"
            android:icon="@drawable/drawer_results"
            android:title="@string/drawer_results" />
    </group>

    <group android:id="@+id/drawer_divider"
        android:checkableBehavior="single">
            <item
                android:id="@+id/drawer_developers"
                android:icon="@drawable/drawer_developers"
                android:title="@string/drawer_developers" />
            <item
                android:id="@+id/drawer_about_us"
                android:icon="@drawable/drawer_about"
                android:title="@string/drawer_about_us" />
    </group>
</menu>
