<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="270dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/windows1"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/cardview_dark_background"
                android:id="@+id/frameLayout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewPositionWindows"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewWindows"
                        android:layout_centerHorizontal="true"
                        android:text="@string/head"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textViewWindows"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/Gautham"
                        android:textColor="@color/white_developers"
                        android:textSize="16sp" />

                </RelativeLayout>

            </FrameLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/dev_icon_gautham"
                android:id="@+id/imageViewApple"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:baselineAligned="false"
            android:background="@color/cardview_dark_background">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/padding_half">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:src="@drawable/dev_icon_anjali"
                    android:layout_marginBottom="@dimen/padding_half"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Anjali"
                    android:textColor="@color/white_developers"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/padding_half">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:src="@drawable/dev_icon_krishnabirla"
                    android:layout_marginBottom="@dimen/padding_half"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Krishna"
                    android:textColor="@color/white_developers"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>